@@ -3,6 +3,8 @@ CHANGES.txt - 2009-05-26
 
 CHANGES IN CUPS V1.4rc1
 
+	- The PPD compiler's #if/#elif/#else/#endif did not work for undefined
+	  variables (STR #3210)
 	- Static libraries could not be installed by a non-root user on systems
 	  needing a ranlib program (STR #3209)
 	- The scheduler incorrectly always tried to copy Kerberos credentials
